--- a/feedback/25_08_14.md
+++ b/feedback/25_08_14.md
@@ -1,3 +1,14 @@
-자연환경에 따라 자동차 인식이 떨어질 수 있기 때문에 이점을 보완해야 할 것  
+<div align="center">
 
-ex(눈이 자동차를 덮어 인식방해, 폭우로 인해 시야확보 어려움)
+### ⚠️ 환경적 한계
+
+<span style="font-weight:bold; font-size:16px; color:#b22222;">
+자연환경 요인에 따라 차량 인식 성능이 저하될 수 있으므로, 이러한 한계를 보완하는 전략이 필요합니다.
+</span>
+
+<ul>
+<li>❄️ 강설: 차량이 눈에 가려져 인식이 어려움</li>
+<li>🌧️ 폭우: 카메라 시야 확보 제한</li>
+</ul>
+
+</div>
